--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Prerequisites
 *.d
 
@@ -50,3 +52,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*.pdf 
+#ignore pdf
+
+/build/
+/CMakeFiles/
+/CMakeCache.txt
+/Makefile
+/cmake_install.cmake
+/install_manifest.txt
